# babysafety

./: .gitignore  CLAUDE.md  DISCLAIMER.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: ingredient-researcher.md
.claude/rules/: ingredient-data.md
.claude/skills/add-ingredient/: SKILL.md
.claude/skills/check-label/: SKILL.md
babysafety/: __init__.py  cli.py  compiler.py  database.py  matcher.py  models.py  parser.py  reporter.py
data/: categories.yaml  sources.yaml
data/ingredients/baby_products/: benzocaine.yaml  camphor.yaml  eucalyptus_oil.yaml  lidocaine_teething.yaml  methyl_salicylate.yaml  peppermint_menthol.yaml  talc_loose_powder.yaml
data/ingredients/food/: caffeine.yaml
data/ingredients/skincare/: allantoin.yaml  avena_sativa.yaml  avobenzone.yaml  azelaic_acid.yaml  benzalkonium_chloride.yaml  benzoyl_peroxide.yaml  benzyl_alcohol.yaml  butylene_glycol.yaml  caprylic_capric_triglyceride.yaml  carbomer.yaml  cetearyl_alcohol.yaml  cetyl_alcohol.yaml  citric_acid.yaml  dihydroxyacetone.yaml  dimethicone.yaml  disodium_edta.yaml  distearyldimonium_chloride.yaml  essential_oils_pregnancy_avoid.yaml  formaldehyde_releasers.yaml  fragrance.yaml  glycerin.yaml  glycolic_acid.yaml  hair_dye.yaml  homosalate.yaml  hydroquinone.yaml  isopropyl_palmitate.yaml  lead_cosmetics.yaml  mercury_cosmetics.yaml  minoxidil.yaml  niacinamide.yaml  octinoxate.yaml  octocrylene.yaml  oxybenzone.yaml  panthenol.yaml  parabens.yaml  peg_compounds.yaml  petrolatum.yaml  (+17 more)
tests/: test_data_integrity.py  test_matcher.py  test_parser.py
